add seo meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/qr-code-icon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>QR Code Generator</title>
+    <meta
+      name="description"
+      content="Easily create customizable QR codes with this generator."
+    />
+
+    <meta
+      name="keywords"
+      content="QR code, QR generator, free QR code, create QR code, QR code tool"
+    />
+
+    <meta name="author" content="Julio Salas" />
+
+    <meta property="og:title" content="QR Code Generator" />
+    <meta
+      property="og:description"
+      content="Create customizable QR codes quickly and easily with this generator."
+    />
+    <meta property="og:image" content="TODO" />
+    <meta
+      property="og:url"
+      content="https://julio-salas03.github.io/qr-codes/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="QR Code Generator" />
   </head>
   <body>
     <div id="root"></div>
